# pycrfpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: wheels.yml
src/: binding.cpp
